testsuite/tests/parser/should_fail/Or2.hs
{-# LANGUAGE OrPatterns #-}

module Main where

main = case 3 of
  (one of 4) -> False